# CUDA-RNN

./: .cuMatrix4d.h.swp  .gitignore  Base.cpp  Base.h  CMakeLists.txt  Config.cpp  Config.h  InputInit.cu  InputInit.h  Layer.h  LayerInit.cpp  LayerInit.h  MemoryMonitor.cpp  MemoryMonitor.h  README.md  README.md~  Samples.h  TrainNetwork.cpp  TrainNetwork.h  \  compute.cu  compute.h  config.txt  costGradient.cpp  costGradient.h  cuMath.cu  cuMath.h  cuMatrix.cu  cuMatrix.h  cuMatrix4d.cu  cuMatrix4d.h  cuMatrixVector.h  debug.cpp  debug.h  hardware.cpp  hardware.h  init.cpp  init.h  main.cpp  prepare.cu  (+12 more)
